--- a/requirements39_Windows.txt
+++ b/requirements39_Windows.txt
@@ -27,6 +27,7 @@ Pygments==2.10.0
 pylsl==1.15.0
 pyparsing==2.4.7
 pyqtgraph==0.12.3
+pyserial==3.5
 PySide2==5.15.2
 python-dateutil==2.8.2
 pytz==2021.3
